--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,3 +1,29 @@
+<style>
+    body {
+    
+      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url(https://www.teahub.io/photos/full/197-1977791_portland-wallpapers-hd-portland-oregon-city-view.jpg);
+      background-repeat: no-repeat; 
+      background-position: center;
+      background-attachment: fixed; 
+      webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+      height:100%;
+      width:100%; 
+      
+    }
+
+    section{
+      padding: 40px;
+      padding-bottom: 100vh;
+      background-color: white;
+    }
+    
+</style>
+
+<body>
+<section>
 <h2><%= @event.title %></h2>
 <!--<h2>The Control Room</h2>-->
 
@@ -123,3 +149,5 @@
 </tbody>
 </table>
 </div>
+</section>
+</body>
