--- a/app/views/seating_types/show.html.erb
+++ b/app/views/seating_types/show.html.erb
@@ -31,5 +31,5 @@
 </p>
 
 <%= link_to 'Edit', edit_seating_type_path(@seating_type), class:"btn btn-secondary" %> |
-<%= link_to 'Back', seating_types_path, class:"btn btn-secondary" %>
+<%= link_to 'Back', event_path, class:"btn btn-secondary" %>
 </div>
