--- a/app/views/seating_types/edit.html.erb
+++ b/app/views/seating_types/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', seating_type: @seating_type %>
 
 <%= link_to 'Show', @seating_type %> |
-<%= link_to 'Back', seating_types_path %>
+<%= link_to 'Back', event_path %>
