--- a/app/views/seating_types/index.html.erb
+++ b/app/views/seating_types/index.html.erb
@@ -34,4 +34,5 @@
 
 <br>
 
-<%= link_to 'New Seating Type', new_seating_type_path %>
+<%= link_to 'New Seating Type', new_seating_type_path %> |
+<%= link_to 'Back', event_path(:id) %>
