--- a/app/views/seating_types/show.html.erb
+++ b/app/views/seating_types/show.html.erb
@@ -27,7 +27,7 @@
 
 <p>
   <strong>Event:</strong>
-  <%= @seating_type.event %>
+  <%= @seating_type.event.title %>
 </p>
 
 <%= link_to 'Edit', edit_seating_type_path(@seating_type), class:"btn btn-secondary" %> |
