--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-image: linear-gradient(white, gray);">
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e6ccff;">
     <h1 class="title">EVENTNXT</h1>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
