--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -104,7 +104,7 @@
 <%= link_to 'New Seating Type', new_seating_type_path, class:"btn btn-primary" %> <br> <br>
 
 <%= form_tag reconcile_path %>
-<%= link_to "Reconcile", event_path(:reconcile => 'true'), class:"btn btn-primary" %>
+<%= link_to "Reconcile", event_path(:reconcile => 'true', :id => @event.id), class:"btn btn-primary" %>
 
 
 <h3> Guest List </h3>
@@ -146,6 +146,7 @@
     <% end %>
     <tr>
       <%= form_for [@event, @event.guests.build] do |form| %>
+      <!--<%= form_for [@event, @event.guests.build],  :url => update_event_guest_path(@event) do |form| %>-->
         <% @guest_params.each do |param| %>  
         <% if param=="event_id" %>  
           <td> 
