--- a/app/views/events/create_event.html.erb
+++ b/app/views/events/create_event.html.erb
@@ -32,9 +32,13 @@ section{
   padding-bottom: 100vh;
 }
 
-.display-6, h2, h3, p, input, label{
+.display-6, h2, h3, input, label{
   color: white;
 
+}
+
+p {
+  color: black;
 }
 
 .button{
@@ -70,7 +74,8 @@ section{
   text-align: center; 
   padding-top: 10px; 
   padding-bottom: 20px; 
-  background-color: #e6ccff; 
+  background-color: #e6ccff;
+  color: black; 
   border-radius: 10px;
   padding: 10px;
 }
@@ -95,6 +100,13 @@ section{
     button_name.style.background = "lightgreen";
     x.style.display = "none";
   }
+}
+
+function refresh()
+{
+  // or $('#myform')[0] with jQuery
+  $("#reward-msg").load(location.href + " #reward-msg");
+  
 }
 
 </script>
@@ -127,24 +139,27 @@ section{
   <br><br>
   <div id="referral-contents-toggle">
   <h4>Referral Reward Email Template</h4>
-  <div class="ticket" style="background: white;"> 
+  <div class="referral-template" style="background: transparent; color: black;"> 
         <p>Hi Guest,</p>
-        <p>Please send your friends an invitation to FashionNXT by inserting their emails in the box below. You will receive XYZ Reward if any of your friends purchase tickets to FashionNXT.</p>
+        <p id="reward-msg">Please send your friend an invitation to FashionNXT by inserting their email in the box below. You will receive <%= $reward.to_s %> Reward if any of your friends purchase tickets to FashionNXT.</p>
         <p id="email"><b>Email:  <%= label_tag(:email, "")%>
-        <%= text_field_tag(:email, nil, :required => 'true', placeholder: "email")%><br><br></p>
+        <%= text_field_tag(:email, nil, :required => 'true', placeholder: "email", style:"color: black;")%><br><br></p>
         <p>Choose the date you are going and want your friends to join:</p>
         <p id="event-date"><b>Event date:  <%= label_tag(:event_date, "") %>
-        <%= text_field_tag(:event_date, nil, :required => 'true', placeholder: "MM/DD/YYYY")%><br><br></p>
+        <%= text_field_tag(:event_date, nil, :required => 'true', placeholder: "MM/DD/YYYY", style:"color: black;")%><br><br></p>
   </div>
+
     <%= form_tag '/events/create_event', :id => "referral-form", :remote => true do %>
-    <%= label_tag(:reward, "Insert Reward:") %>
-    <%= text_field_tag(:reward, nil, :required => 'true', placeholder: "XYZ Reward")%><br><br>
+    <%= label_tag(:reward, "Insert Reward:", :style => "color: black;") %>
+    <%= text_field_tag(:reward, nil, :required => 'true', placeholder: "XYZ Reward", :style => "color: black;")%><br><br>
+    <%= button_tag "Save Changes", :id => "thisone", :type => "button", :class => "btn btn-success btn-rounded", :onclick => "refresh()" %>
     <%= submit_tag "Save Changes", :id => "thisone", :class => "btn btn-success btn-rounded", :onclick => "refresh()" %>
     <% end %>
+  
 
 <br><br>
 
-    <%= button_to "Back to Dashboard", root_path, :class => "button", :type => "button", :method => "get"%>
+    <%= button_to "Back to Dashboard", root_path, :class => "btn btn-success btn-rounded", :type => "button", :method => "get" %>
 
 </div>
 <br><br>
