--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -28,13 +28,11 @@
 <!--<h2>The Control Room</h2>-->
 
 <img src='<%= $event_pic.to_s %>' height='<%= $event_pic_size_left.to_s %>' width='<%= $event_pic_size_right.to_s %>'>
-<p>source</p>
 <p><%= $event_pic_size_left.to_s %></p>
 
 
-<ul>
-  <li><%= link_to "Back", root_path%></li>
-</ul>
+<%= link_to "Back", root_path, class:"btn btn-primary" %><br><br>
+
 
 <h3>Summarized Ticket Commitments Information</h3>
 
@@ -101,11 +99,13 @@
 
 </div>
 
+<div style="text-align: center;">
 <%= link_to 'New Seating Type', new_seating_type_path, class:"btn btn-primary" %> <br> <br>
 
 <%= form_tag reconcile_path %>
 <%= link_to "Reconcile", event_path(:reconcile => 'true', :id => @event.id), class:"btn btn-primary" %>
-
+<br><br>
+</div>
 
 <h3> Guest List </h3>
 
@@ -194,3 +194,7 @@
 </div>
 </section>
 </body>
+<%end%>
+
+
+
