fixed adding guests to seat categories

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -102,8 +102,13 @@
 <div style="text-align: center;">
 <%= link_to 'New Seating Type', new_seating_type_path, class:"btn btn-primary" %> <br> <br>
 
-<%= form_tag reconcile_path %>
-<%= link_to "Reconcile", event_path(:reconcile => 'true', :id => @event.id), class:"btn btn-primary" %>
+<%
+=begin%>
+ <%= form_tag reconcile_path %>
+<%= link_to "Reconcile", event_path(:reconcile => 'true', :id => @event.id), class:"btn btn-primary" %> 
+<%
+=end%>
+
 <br><br>
 </div>
 
@@ -168,6 +173,9 @@
   </tbody>
 </table>
 </div>
+
+<%= form_tag reconcile_path %>
+<%= link_to "Reconcile", event_path(:reconcile => 'true', :id => @event.id), class:"btn btn-primary" %>
 
 <h3>Box Office List</h3>
 <div class="table-responsive">
