--- a/app/views/events/create_event.html.erb
+++ b/app/views/events/create_event.html.erb
@@ -139,7 +139,7 @@ function refresh()
   <br><br>
   <div id="referral-contents-toggle">
   <h4>Referral Reward Email Template</h4>
-  <div class="referral-template" style="background: transparent; color: black;"> 
+  <div class="referral-template" style="background: white; color: black;"> 
         <p>Hi Guest,</p>
         <p id="reward-msg">Please send your friend an invitation to FashionNXT by inserting their email in the box below. You will receive <%= $reward.to_s %> Reward if any of your friends purchase tickets to FashionNXT.</p>
         <p id="email"><b>Email:  <%= label_tag(:email, "")%>
