--- a/app/views/seating_types/show.html.erb
+++ b/app/views/seating_types/show.html.erb
@@ -10,15 +10,15 @@
   <%= @seating_type.total_seat_count %>
 </p>
 
-<p>
-  <strong>Vip seat count:</strong>
-  <%= @seating_type.vip_seat_count %>
-</p>
+<!--<p>-->
+<!--  <strong>Vip seat count:</strong>-->
+<!--  <%= @seating_type.vip_seat_count %>-->
+<!--</p>-->
 
-<p>
-  <strong>Box office seat count:</strong>
-  <%= @seating_type.box_office_seat_count %>
-</p>
+<!--<p>-->
+<!--  <strong>Box office seat count:</strong>-->
+<!--  <%= @seating_type.box_office_seat_count %>-->
+<!--</p>-->
 
 <p>
   <strong>Balance seats:</strong>
