--- a/app/views/events/create_event.html.erb
+++ b/app/views/events/create_event.html.erb
@@ -8,6 +8,12 @@
     text-align: center;
   }
 
+  .ticket {
+            text-align: center;
+            border: 3px solid black;
+            margin: 50px;
+    }
+
   #file-button{
     margin-left: 20%;
   }
@@ -32,9 +38,9 @@ section{
   padding-bottom: 100vh;
 }
 
-.display-6, h2, h3, input, label{
+.display-6, h2, h3, h4, input, label{
   color: white;
-
+  text-align: center;
 }
 
 p {
@@ -113,7 +119,22 @@ function refresh()
 
 <br>
 
-<h1 class="display-6" style="text-align: center;"> Guest Setup Portal</h1>
+    <h4>Invitation Card Contents Preview</h4>
+
+    <div class="ticket" style="background: white; color: black; border: 2px solid white; border-radius: 3px;">
+        <h2 id="event-t" style="color: black;"><%= $title_saved.to_s %></h2><br>
+        <div id="img">
+        <img id="eventpic" src='<%= $event_pic.to_s %>' height='<%= $event_pic_size_left %>' width='<%= $event_pic_size_right %>'>
+        </div>
+        <br>
+        <p id="event-date"><b>Event date: <%= $event_date.to_s %></b></p>
+        <p id="num-tickets"><b>Number of Tickets: <%= $event_tickets.to_s %></b></p>
+        <p><b>Event Address: 1255 NW 9th Ave, Portland, OR 97209</b></p>
+        <p id="about-event"><strong>About Event: </strong><%= $event_txt.to_s %></p>
+        <p style="color: orange;"><strong>NOTE: </strong>Click browser back button to make changes.</p>
+    </div><br><br>
+
+<h1 class="display-6" style="text-align: center;"> Manage Guests </h1>
 <br>
 
 
@@ -167,6 +188,3 @@ function refresh()
 <br><br>
 </section>
 </body>
-
-    
-    
