--- a/app/views/guest_mailer/rsvp_invitation_email.html.erb
+++ b/app/views/guest_mailer/rsvp_invitation_email.html.erb
@@ -38,11 +38,11 @@
       Congratulations! You're invited by <%= @guest.added_by %> to an event.
     </p>
     <div class="ticket">
-        <h2>Event Title: <%= @event.title %></h2>
-        <div id="img"><img src='<%= $event_pic.to_s %>' height="300px"></div>
+        <h2>Event Title: <%= $title_saved.to_s %></h2>
+        <div id="img"><img src='<%= $event_pic.to_s %>' height='<%= $event_pic_size_left.to_s %>' width='<%= $event_pic_size_right.to_s %>'></div>
         <p><b>Guest Name: <%= @guest.first_name %></b></p>
-        <p><b>Event date: <%= @event.date %></b></p>
-        <p><b>Ticket Number: <%= @guest.total_booked_num %></b></p>
+        <p><b>Event date: <%= $event_date.to_s %></b></p>
+        <p><b>Number of tickets: <%= $event_tickets.to_s %></b></p>
         <p><b>Seat Category: <%= @guest.seat_category %></b></p>
         <p><strong>About Event: </strong><%= $event_txt.to_s %></p>
         <br><br><br>
