--- a/app/views/guest_mailer/rsvp_confirmation_email.text.erb
+++ b/app/views/guest_mailer/rsvp_confirmation_email.text.erb
@@ -1,8 +1,9 @@
 Your seat assignment has been confirmed.
 Name: <%= @guest.first_name %> <%= @guest.last_name %>
 Event title: <%= @event.title %>
-Event date: <%= @event.date %>
-Ticket Number: <%= @guest.total_booked_num %>
-Seat Category: <%= @guest.seat_category %>
+Event date: <%= @event.datetime %>
+<%= @guest.seats.select(:category).distinct.each do |category| %>
+  Seat Category: <%= category %>
+<% end %>
 
 Thanks for joining and have a great day!
